--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <div>
-
+    <img src="images/beer.png" alt="">
+    <a href="/beers.hbs">Check the Beers!</a>
+    <a href="/randombeer.hbs">Check a Random Beer!</a>
 </div>
