--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div>
-    <img src="images/beer.png" alt="">
+    <img src="images/beer.png" alt="" class="homebeer"><br><br><br>
     <a href="/beers.hbs">Check the Beers!</a>
     <a href="/randombeer.hbs">Check a Random Beer!</a>
 </div>
