--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,11 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+.navbar {
+  color: white;
+  background-color: #2081c3;
+  margin-bottom: 50px;
+  font-style: none;
+  font-family: Arial;
+}
