--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
        <a href="/">Home</a>
        <a href="/beers.hbs">Beers</a>
        <a href="/randombeer.hbs">Random Beer</a>
